@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
@@ -16,6 +17,7 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
+import org.springframework.web.multipart.MultipartFile;
 
 import com.ssginc8.docto.doctor.entity.Doctor;
 
@@ -38,6 +40,7 @@ import com.ssginc8.docto.hospital.entity.Hospital;
 import com.ssginc8.docto.hospital.entity.HospitalSchedule;
 import com.ssginc8.docto.hospital.entity.ProvidedService;
 import com.ssginc8.docto.hospital.provider.HospitalProvider;
+import com.ssginc8.docto.hospital.repo.ProvidedServiceRepo;
 import com.ssginc8.docto.review.provider.ReviewProvider;
 import com.ssginc8.docto.user.entity.Role;
 import com.ssginc8.docto.user.entity.User;
@@ -62,16 +65,48 @@ public class HospitalServiceImpl implements HospitalService {
 	private final FileService fileService;
 
 
-
-
-
 	/**
 	 *  로그인 사용자의 병원 정보 얻기
 	 */
 	@Override
 	public HospitalResponse getHospitalByAdminId(Long userId) {
+		// 1) 관리자(userId) 로 조회한 병원 엔티티
+		Hospital hospital = hospitalProvider.findByUserUserId(userId);
 
-		return hospitalProvider.getHospitalByAdminId(userId);
+		// 2) DB 에서 가져온 fileIds 를 mutable 리스트로 복사
+		List<Long> fileIds = hospital.getFileIds() != null
+			? new ArrayList<>(hospital.getFileIds())
+			: new ArrayList<>();
+
+		// 3) 실제 존재하는 파일만 한 번에 조회
+		List<File> files = fileProvider.findAllById(fileIds);
+
+		// 4) URL 매핑
+		List<String> imageUrls = files.stream()
+			.map(File::getUrl)
+			.collect(Collectors.toList());
+
+		// 5) 서비스 이름 조회
+		List<String> serviceNames =
+			hospitalProvider.findServiceNamesByHospitalId(hospital.getHospitalId());
+
+		// 6) DTO 로 변환할 때, fileIds 도 함께 담아 줍니다
+		return HospitalResponse.builder()
+			.hospitalId(      hospital.getHospitalId())
+			.name(            hospital.getName())
+			.address(         hospital.getAddress())
+			.phone(           hospital.getPhone())
+			.introduction(    hospital.getIntroduction())
+			.notice(          hospital.getNotice())
+			.latitude(        hospital.getLatitude())
+			.longitude(       hospital.getLongitude())
+			.businessRegistrationNumber(hospital.getBusinessRegistrationNumber())
+			// **기존에 저장된 파일 ID 리스트**
+			.fileIds(         fileIds)
+			// **실제 존재하는 파일만 매핑된 URL 리스트**
+			.imageUrls(       imageUrls)
+			.serviceNames(    serviceNames)
+			.build();
 	}
 
 	@Override
@@ -146,7 +181,7 @@ public class HospitalServiceImpl implements HospitalService {
 		return hospitals.map(hospital -> {
 			String imageUrl = hospitalProvider.getImageUrl(hospital.getHospitalId());
 			List<String> serviceNames = hospitalProvider.getServiceNames(hospital.getHospitalId());
-			return HospitalResponse.from(hospital, imageUrl, serviceNames);
+			return HospitalResponse.from(hospital, Collections.singletonList(imageUrl), serviceNames);
 		});
 	}
 
@@ -169,8 +204,9 @@ public class HospitalServiceImpl implements HospitalService {
 			.map(ProvidedService::getServiceName)
 			.collect(Collectors.toList());
 
-		String imageUrl = fileProvider.getFileUrlById(hospital.getFileId()); // ✅ 이미지 URL 가져오기
-		log.info("병원 fileId = {}", hospital.getFileId());
+		List<String> imageUrls = fileProvider.getFileUrlsByIds(hospital.getFileIds()); // ✅ 이미지 URL 가져오기\
+		List<Long>   fileIds   = hospital.getFileIds();
+		log.info("병원 fileId = {}", hospital.getFileIds());
 		return HospitalResponse.builder()
 			.hospitalId(hospital.getHospitalId())
 			.name(hospital.getName())
@@ -182,7 +218,8 @@ public class HospitalServiceImpl implements HospitalService {
 			.notice(hospital.getNotice())
 			.waiting(hospital.getWaiting())
 			.serviceNames(serviceNames)
-			.imageUrl(imageUrl) // ✅ 포함
+			.imageUrls(imageUrls)
+			.fileIds(fileIds)
 			.build();
 
 	}
@@ -195,77 +232,71 @@ public class HospitalServiceImpl implements HospitalService {
 	 */
 
 	@Override
-	public Long saveHospital(Long userId, HospitalRequest hospitalRequest) {
-		// 🔍 유저 조회
+	public Long saveHospital(Long userId, HospitalRequest dto) {
 		User user = hospitalProvider.getUserById(userId);
 
-		Long fileId = null;
-
-		// 📁 파일 업로드 처리
-		if (hospitalRequest.getFile() != null && !hospitalRequest.getFile().isEmpty()) {
-			UploadFile.Result uploadResult = fileService.uploadImage(
-				UploadFile.Command.builder()
-					.file(hospitalRequest.getFile())
-					.category(Category.HOSPITAL) // 카테고리 예시
-					.build()
-			);
-
-			// DB에 저장할 File 엔티티 생성 및 저장
-			File file = File.createFile(
-				uploadResult.getCategory(),
-				uploadResult.getFileName(),
-				uploadResult.getOriginalFileName(),
-				uploadResult.getUrl(),
-				uploadResult.getBucket(),
-				uploadResult.getFileSize(),
-				uploadResult.getFileType()
-			);
-
-			File savedFile = fileProvider.saveFile(file);
-			fileId = savedFile.getFileId();
-		}
-
+		// 1) Hospital 생성: fileIds는 mutable ArrayList 로 초기화
 		Hospital hospital = Hospital.create(
 			user,
-			hospitalRequest.getName(),
-			hospitalRequest.getAddress(),
-			hospitalRequest.getPhone(),
-			hospitalRequest.getIntroduction(),
-			hospitalRequest.getBusinessRegistrationNumber(),
-			hospitalRequest.getLatitude(),
-			hospitalRequest.getLongitude(),
-			hospitalRequest.getNotice(),
-			fileId
+			dto.getName(),
+			dto.getAddress(),
+			dto.getPhone(),
+			dto.getIntroduction(),
+			dto.getBusinessRegistrationNumber(),
+			dto.getLatitude(),
+			dto.getLongitude(),
+			dto.getNotice(),
+			new ArrayList<>()
 		);
 
+		// 2) 파일 업로드 & ID 리스트에 추가
+		List<Long> fileIds = new ArrayList<>();
+		if (dto.getFiles() != null) {
+			for (MultipartFile mf : dto.getFiles()) {
+				if (mf.isEmpty()) continue;
+				UploadFile.Result res = fileService.uploadImage(
+					UploadFile.Command.builder()
+						.file(mf)
+						.category(Category.HOSPITAL)
+						.build()
+				);
+				File fileEntity = File.createFile(
+					res.getCategory(),
+					res.getFileName(),
+					res.getOriginalFileName(),
+					res.getUrl(),
+					res.getBucket(),
+					res.getFileSize(),
+					res.getFileType()
+				);
+				File saved = fileProvider.saveFile(fileEntity);
+				fileIds.add(saved.getFileId());
+			}
+		}
+		hospital.getFileIds().addAll(fileIds);
+
+		// 3) hospital 저장
 		hospitalProvider.saveHospital(hospital);
-		// 🧾 서비스 엔티티 생성 및 저장
-		List<String> serviceNames = hospitalRequest.getServiceName();
 
-		if (serviceNames != null && !serviceNames.isEmpty()) {
-			List<ProvidedService> services = serviceNames.stream()
-				.filter(name -> name != null && !name.trim().isEmpty())
-				.map(name -> ProvidedService.create(name.trim(), hospital))
+		// 4) 서비스 등록
+		if (dto.getServiceName() != null && !dto.getServiceName().isEmpty()) {
+			List<ProvidedService> services = dto.getServiceName().stream()
+				.filter(s -> !s.isBlank())
+				// Collectors.toCollection으로도 ArrayList 생성이 가능합니다.
+				.map(s -> ProvidedService.create(s, hospital))
 				.collect(Collectors.toList());
-
-			hospitalProvider.saveServices(services);
+			hospitalProvider.saveAll(services);
 		}
 
 		return hospital.getHospitalId();
 	}
 
-	/**
-	 * 병원 정보 수정
-	 *
-	 * @return
-	 */
 
-	@Transactional
 	@Override
 	public Long updateHospital(Long hospitalId, HospitalUpdate dto) {
 		Hospital hospital = hospitalProvider.getHospitalById(hospitalId);
 
-		// 병원 기본 정보 업데이트
+		// 1) 기본 정보 업데이트
 		hospital.updateFromValues(
 			dto.getName(),
 			dto.getPhone(),
@@ -274,19 +305,66 @@ public class HospitalServiceImpl implements HospitalService {
 			dto.getNotice()
 		);
 
-		// 기존 서비스 모두 삭제
-		hospitalProvider.deleteByHospitalHospitalId(hospitalId);
-
-		// 새 서비스 등록
-		if (dto.getServiceNames() != null && !dto.getServiceNames().isEmpty()) {
-			List<ProvidedService> newServices = dto.getServiceNames().stream()
-				.filter(name -> name != null && !name.trim().isEmpty())
-				.map(name -> ProvidedService.create(name.trim(), hospital))
-				.collect(Collectors.toList());
-
-			hospitalProvider.saveServices(newServices);
-
+		// 2) 삭제할 파일 처리
+		if (dto.getDeletedFileIds() != null) {
+			for (Long fileIdToDelete : dto.getDeletedFileIds()) {
+				File file = fileProvider.getFileById(fileIdToDelete);
+				fileService.deleteFile(file.getFileName());
+				fileProvider.deleteFileById(fileIdToDelete);
+			}
 		}
+
+		// 3) 신규 파일 업로드 및 ID 수집
+		List<Long> newFileIds = new ArrayList<>();
+		if (dto.getExistingFileIds() != null) {
+			newFileIds.addAll(dto.getExistingFileIds());
+		}
+		if (dto.getFiles() != null) {
+			for (MultipartFile mf : dto.getFiles()) {
+				if (mf.isEmpty()) continue;
+				UploadFile.Result res = fileService.uploadImage(
+					UploadFile.Command.builder()
+						.file(mf)
+						.category(Category.HOSPITAL)
+						.build()
+				);
+				File f = File.createFile(
+					res.getCategory(),
+					res.getFileName(),
+					res.getOriginalFileName(),
+					res.getUrl(),
+					res.getBucket(),
+					res.getFileSize(),
+					res.getFileType()
+				);
+				File saved = fileProvider.saveFile(f);
+				newFileIds.add(saved.getFileId());
+			}
+		}
+
+		// 4) fileIds 컬렉션을 교체
+		hospital.getFileIds().clear();
+		hospital.getFileIds().addAll(newFileIds);
+
+		// 5) 서비스 목록 — diff 로직 적용
+		//    (기존에 남길 것만 유지, 새로 추가된 것만 insert, 빠진 것만 delete)
+		List<ProvidedService> oldServices = hospitalProvider.findServicesByHospitalId(hospitalId);
+		Set<String> newNames = dto.getServiceNames() == null
+			? Collections.emptySet()
+			: dto.getServiceNames().stream()
+			.filter(s -> !s.isBlank())
+			.collect(Collectors.toSet());
+
+		// 삭제할 서비스
+		oldServices.stream()
+			.filter(sv -> !newNames.contains(sv.getName()))
+			.forEach(sv -> hospitalProvider.deleteServiceById(sv.getId()));
+
+		// 추가할 서비스
+		newNames.stream()
+			.filter(name -> oldServices.stream().noneMatch(sv -> sv.getName().equals(name)))
+			.map(name -> ProvidedService.create(name, hospital))
+			.forEach(hospitalProvider::saveService);
 
 		return hospitalId;
 	}
@@ -417,23 +495,36 @@ public List<HospitalScheduleResponse> getSchedules(Long hospitalId) {
 	@Override
 	@Transactional
 	public void updateHospitalSchedule(Long hospitalId, List<HospitalScheduleRequest> scheduleDtos) {
+		// 1. 병원 조회
 		Hospital hospital = hospitalProvider.getHospitalById(hospitalId);
 
 		for (HospitalScheduleRequest dto : scheduleDtos) {
-			HospitalSchedule schedule = hospitalProvider.getScheduleByIdOrThrow(dto.getHospitalScheduleId());
-			hospitalProvider.validateScheduleBelongsToHospital(schedule, hospital);
+			if (dto.getHospitalScheduleId() != null) {
+				// 2.1 기존 스케줄 업데이트
+				HospitalSchedule schedule = hospitalProvider.getScheduleByIdOrThrow(dto.getHospitalScheduleId());
+				hospitalProvider.validateScheduleBelongsToHospital(schedule, hospital);
 
-			schedule.updateSchedule(
-				dto.getDayOfWeek(),
-				dto.getOpenTime(),
-				dto.getCloseTime(),
-				dto.getLunchStart(),
-				dto.getLunchEnd()
-			);
+				schedule.updateSchedule(
+					dto.getDayOfWeek(),
+					dto.getOpenTime(),
+					dto.getCloseTime(),
+					dto.getLunchStart(),
+					dto.getLunchEnd()
+				);
+			} else {
+				// 2.2 신규 스케줄 생성
+				HospitalSchedule newSchedule = HospitalSchedule.create(
+					hospital,
+					dto.getDayOfWeek(),
+					dto.getOpenTime(),
+					dto.getCloseTime(),
+					dto.getLunchStart(),
+					dto.getLunchEnd()
+				);
+				hospitalProvider.saveHospitalSchedule(newSchedule);
+			}
 		}
 	}
-
-
 	/**
 	 * 병원 영업시간 삭제
 	 *
